# navigation

./: .gitmodules  README.md
nav2/: CMakeLists.txt  package.xml
nav2/config/nav2/: nav2_RPP_niggy_real_params.yaml  nav2_RPP_tb3_gazebo_params.yaml  nav2_RPP_walkie_sim_params.yaml  nav2_mppi_real_walkie_param.yaml  nav2_mppi_walkie_real_param.yaml  nav2_mppi_walkie_real_param_stvl.yaml  nav2_mppi_walkie_sim_params.yaml
nav2/config/nav2/behavior_tree/: nav_topose_no_spin_backup_bt.xml
nav2/config/slam/: slam_toolbox_params.yaml
nav2/launch/: localization_Nav2.launch.py  localization_Nav2_real.launch.py  localization_Nav2_sim.launch.py  localization_Nav2_stvl_real.launch.py  slam_cartographer.launch.py  slam_toolbox.launch.py
nav2/map/10_090226_ChulaPat14_2/: chulapat14_2.yaml
nav2/map/11_20022026_kbtg_fl3/: map.pgm  map.yaml
nav2/map/1_280924_tb3_world_carthographer/: map_1727461600.pgm  map_1727461600.yaml
nav2/map/2_280924_tb3_world_slam_toolbox/: map_1727462033.yaml
nav2/map/3_290924_tb3_world_rtabLidar/: map_1727464840.pgm
nav2/map/5_01102024_tb3_eic_slam_toolbox/: map_1727786173.pgm  map_1727786173.yaml
nav2/map/8_23102025_SimWalkie_awssmallhouse_slam_toolbox/: map.pgm  map.yaml
nav2/map/9_091125_Walkie_EIC_slam_toolbox/: map.yaml
nav2/map/EIC/: map_976.pgm  map_976.yaml
nav2/robot_navigation/: SgoalService.cpp  accel_stamp_node.py  current_pose_publisher.py  goPose_Backend.py
spatio_temporal_voxel_layer/openvdb_vendor/: package.xml
spatio_temporal_voxel_layer/spatio_temporal_voxel_layer/: CMakeLists.txt  package.xml
spatio_temporal_voxel_layer/spatio_temporal_voxel_layer/example/: constrained_indoor_environment_config.yaml  mid360.yaml  outdoor_environment_config.yaml  standard_indoor_environment_config.yaml  vlp16_config.yaml
spatio_temporal_voxel_layer/spatio_temporal_voxel_layer/include/spatio_temporal_voxel_layer/: measurement_buffer.hpp  measurement_reading.h  spatio_temporal_voxel_layer.hpp
spatio_temporal_voxel_layer/spatio_temporal_voxel_layer/include/spatio_temporal_voxel_layer/frustum_models/: three_dimensional_lidar_frustum.hpp
spatio_temporal_voxel_layer/spatio_temporal_voxel_layer/src/: measurement_buffer.cpp  spatio_temporal_voxel_grid.cpp  spatio_temporal_voxel_layer.cpp
spatio_temporal_voxel_layer/spatio_temporal_voxel_layer/src/frustum_models/: three_dimensional_lidar_frustum.cpp
walkie-navigation/: CMakeLists.txt  README.md  package.xml
walkie-navigation/action/: NavigateToObject.action
walkie-navigation/config/: walkie_nav.yaml
walkie-navigation/config/nav2/: nav2_RPP_niggy_real_params.yaml  nav2_RPP_tb3_gazebo_params.yaml  nav2_RPP_walkie_sim_params.yaml  nav2_mppi_walkie_loopback_params.yaml  nav2_mppi_walkie_real_param.yaml  nav2_mppi_walkie_real_param_hero_10_04_26.yaml  nav2_mppi_walkie_real_param_stvl.yaml  nav2_mppi_walkie_real_restaurant_param.yaml  nav2_mppi_walkie_sim_params.yaml
walkie-navigation/config/nav2/behavior_tree/: nav_to_pose_no_spin_backup_bt.xml  nav_to_pose_real_recovery_bt.xml  object_follower_bt.xml
walkie-navigation/config/slam/: slam_toolbox_params.yaml
walkie-navigation/launch/: bringup_launch.py  localization_Nav2_real.launch.py  localization_Nav2_sim.launch.py  localization_Nav2_stvl_real.launch.py  mapping_Nav2_real.launch.py  nav2_loopback.launch.py  navigation_launch.py  slam_toolbox.launch.py
walkie-navigation/map-editor/: README.md  app.js  index.html  style.css
walkie-navigation/map/10_090226_ChulaPat14_2/: chulapat14_2.pgm
walkie-navigation/map/12_09042026_eic_room/: map.pgm  map.yaml
walkie-navigation/map/13_12042026_eic_room/: map.pgm  map.yaml
walkie-navigation/map/14_20052026_eng4_floor20_01/: eng4_20_20052026.pgm  eng4_20_20052026.yaml
walkie-navigation/map/15_23052026_eng4_floor20_02/: map.pgm  map.yaml
walkie-navigation/map/16_29052026_ChulaPat14_3/: map.pgm  map.yaml
walkie-navigation/map/17_30052026_ChulaPat14_4/: map.pgm  map.yaml
walkie-navigation/map/18_17062026_ChulaPat14_5/: map.pgm  map.yaml
walkie-navigation/map/19_25062026_AirBnbHouse_1/: map.pgm  map.yaml
walkie-navigation/map/20_27062026_AirBnbHouse_2/: map.yaml
walkie-navigation/map/21_27062026_AirBnbHouse_3/: map.pgm  map_20260627_0128__map_element.json  map_20260627_0128__map_og.pgm  map_keepout.pgm
walkie-navigation/map/22_27062026_AirBnbHouse_4/: map.pgm  map.yaml  map_20260627_0212__map_element.json  map_20260627_0212__map_world.toml  map_keepout.pgm  map_keepout.yaml  world.toml
walkie-navigation/map/2_280924_tb3_world_slam_toolbox/: map_1727462033.pgm
walkie-navigation/map/3_290924_tb3_world_rtabLidar/: map_1727464840.yaml
walkie-navigation/map/6_13102024_tb3_wrg2023_gz_slam_toolbox/: map_1728824810.pgm  map_1728824810.yaml
walkie-navigation/map/7_02092025_niggy_eic_slam_toolbox/: map.pgm  map.yaml
walkie-navigation/map/9_091125_Walkie_EIC_slam_toolbox/: map.pgm
walkie-navigation/robot_navigation/: AdjustGoalToCostmapAction.cpp  SgoalService.cpp  accel_stamp_node.py  approach_pose.py  compute_goal_bearing_spin.cpp  compute_goal_heading_spin.cpp  compute_path_heading_spin.cpp  costmap_reader.py  head_tilt_near_goal_node.py  human_follower_node.py  nav_commander.py  pointcloud_self_filter_node.py  stvl_decay_manager_node.py
walkie-navigation/srv/: MoveRobot.srv
